[#2345][qilong.lu] refactor: do unit test for MeterReadingCostController.